--- a/montelibero_rises/localisation/english/MTL_country_localisation_MNT_l_english.yml
+++ b/montelibero_rises/localisation/english/MTL_country_localisation_MNT_l_english.yml
@@ -3,3 +3,5 @@ l_english:
  montenegro.0.t:0 "crna gora"
  montenegro.0.d:0 "TEST TEXT"
  montenegro.0.a:0 "DA"
+#National spirit
+ MNT_protests:0 "Law on Freedom of Religion"
